--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "npm": "^6.1.0"
   }
 }
